[gd_scene load_steps=3 format=3 uid="uid://cpro0h54ppmqc"]

[ext_resource type="Script" uid="uid://cs1v8v51w5aku" path="res://scenes/obstacle/obstacle.gd" id="1_f7iuw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f7iuw"]

[node name="Obstacle" type="Area2D"]
collision_layer = 2
input_pickable = false
script = ExtResource("1_f7iuw")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f7iuw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
